2009-03-13 Borut Razem <borut.razem AT siol.net>

	* packages/build.gputils/Makefile: upgraded to gputils-0.13.7

2009-02-08 Borut Razem <borut.razem AT siol.net>

	* packages/build.mingw32/Makefile: updated to gcc-4.3.3

2009-01-20 Borut Razem <borut.razem AT siol.net>

	* packages/build.nsis/Makefile: updated to NSIS version 2.42

2008-12-23 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile: added LD_LIBRARY_PATH
	* bin/dcf.sh: logging enhancements
	* packages/build.gmp_mpfr: added
	* packages/build.mingw32/Makefile: updated to gcc-4.3.2

2008-12-18 Borut Razem <borut.razem AT siol.net>

	* crontab.txt take defaults for DCF
	* packages/build.mingw32/Makefile:
	  updated to binutils-2.19, mingwrt-3.1-mingw32 and w32api-3.13-mingw32

2008-12-14 Borut Razem <borut.razem AT siol.net>

	* .sdcc_builder/profile: defined PERL5LIB
	* bin/dcf.sh: test if can't cd
	* crontab.txt, etc/dcf_list: added cf-x86 to DCF

2008-12-13 Borut Razem <borut.razem AT siol.net>

	* packages/build.libtool/*: added

2008-12-12 Borut Razem <borut.razem AT siol.net>

	* etc/*, .sdcc_builder/*: added

2008-10-31 Borut Razem <borut.razem AT siol.net>

	* packages/build.autoconf/*, packages/build.automake/*: added

2008-09-26 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: call rm_old_versions only if anything was uploaded

2008-09-24 Borut Razem <borut.razem AT siol.net>

	* bin/dcf.sh: new SF web server sdcc-builder,sdcc@web.sourceforge.net
	* rm_old_versions () implemented by using sftp instead ssh

2008-09-14 Borut Razem <borut.razem AT siol.net>

	* packages/build.popt/*: added
	* packages/build.gpsim/Makefile: use glibtoolize on Mac OS X
	* packages/build.ncurses/Makefile: use Xcode2.5 on Mac OS X
	* packages/packages.mk: remove /sw/* include and lib search path

2008-08-24 Borut Razem <borut.razem AT siol.net>

	* packages/build.cpan/Makefile: ask perl for the version number

2008-05-24 Borut Razem <borut.razem AT siol.net>
