@@ -1,3 +1,8 @@
+2009-04-27 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.mingw32/Makefilei: updated to gcc 4.4.0
+	* packages/build.nsis/Makefile: updated to NSIS version 2.44
+
 2009-03-13 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.gputils/Makefile: upgraded to gputils-0.13.7
